# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: python-package.yml
page_loader/: __init__.py  assets.py  cli.py  engine.py  errors.py  links.py  loading.py  logging.py  names.py  resources.py  storage.py  url.py
page_loader/scripts/: __init__.py  page_loader.py
tests/: test_answer_text.py  test_downloading.py  test_exceptions.py  test_files_name.py  tests_preparing_assets.py
tests/fixtures/: page_with_global_links.html  page_with_local_links.html
tests/fixtures/files/: java_script.js  style.css
