[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "page-loader, third project, while studying at hexlet, hope it will be done way more faster than previous one."
authors = ["Ganesha_here <Jamper1488@gmail.com>"]
packages = [
	{ include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.6"
pytest = "^6.2.2"
requests = "^2.25.1"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
flake8 = "^3.8.4"
coverage = "^5.4"
pytest-cov = "^2.11.1"
requests = "^2.25.1"
bs4 = "^0.0.1"

[tool.poetry.scripts]
page-loader = 'page_loader.scripts.page_loader:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
